{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 25,
  "lineage": "703a3a9f-4908-f5aa-6534-b6fc49dac6c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:237889007525:internet-gateway/igw-0a67b23bf35bc97cc",
            "id": "igw-0a67b23bf35bc97cc",
            "owner_id": "237889007525",
            "tags": {
              "Name": "tf-test-igw"
            },
            "vpc_id": "vpc-00b6fdbc2b3d1dcc6"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-077bb0098dfd71832",
            "owner_id": "237889007525",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a67b23bf35bc97cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-test-public-rt"
            },
            "vpc_id": "vpc-00b6fdbc2b3d1dcc6"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019251c23ec1fc70e",
            "route_table_id": "rtb-077bb0098dfd71832",
            "subnet_id": "subnet-08b145fa1bf10a9f6"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public-rt",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:237889007525:security-group/sg-0283a5a9003e75b64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0283a5a9003e75b64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_group_for_test_sg",
            "name_prefix": "",
            "owner_id": "237889007525",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00b6fdbc2b3d1dcc6"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:237889007525:subnet/subnet-08b145fa1bf10a9f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08b145fa1bf10a9f6",
            "map_public_ip_on_launch": false,
            "owner_id": "237889007525",
            "tags": {
              "Name": "tf-test-public-sb"
            },
            "vpc_id": "vpc-00b6fdbc2b3d1dcc6"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:237889007525:vpc/vpc-00b6fdbc2b3d1dcc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0833dafe82f10c2da",
            "default_route_table_id": "rtb-041f83896ba863833",
            "default_security_group_id": "sg-09bb459ffe7ad740b",
            "dhcp_options_id": "dopt-012d7cce637fb6dc7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00b6fdbc2b3d1dcc6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-041f83896ba863833",
            "owner_id": "237889007525",
            "tags": {
              "Name": "tf-test-vpc"
            }
          }
        }
      ]
    }
  ]
}